--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,4 +1,7 @@
 .features {
-    background-color: $color-grey-light-2;
     grid-column: center-start/ center-end;
+    display: grid;
+    margin: 15rem 0;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 6rem;
 }
